Fix list element text-align

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,3 @@ header h1 {
     background-color: #4a4e69;
     color: white;
 }
-li {
-    text-align: left;
-}
