--- a/recipes/css/peach.css
+++ b/recipes/css/peach.css
@@ -65,3 +65,6 @@ header {
     margin-bottom: 20px;
     color: #22223b;
 }
+li {
+    text-align: left;
+}
